<resources>
    <string name="app_name">MashPro</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="media_url_mp3">" https://storage.googleapis.com/exoplayer-test-media-0/play.mp3"</string>
    <string name="title_upload">Upload</string>
    <string name="movie_title">Movie Title</string>
    <string name="description">Description</string>
    <string name="upload">Upload</string>
    <string name="movies">Movies</string>
    <string name="continue_watching">Continue Watching</string>
    <string name="title_downloads">Downloads</string>
    <string name="label_subscription_plan">Choose your plan</string>
    <string name="free">Free</string>
    <string name="monthly">Monthly</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="label_payment_options">Choose payment method</string>
    <string name="serach_no_sub_result">\n\n-Check if the spelling is correct\n-Use different keywords\n-Try general keywords</string>
    <string name="serach_no_result">Your search \"%s\" did not match any listing. Try another search?</string>
    <string name="search_demo_text">Organic</string>
    <string name="title_search">Search</string>
    <string name="search_title">Search</string>
    <string name="title_account">Account</string>
    <string name="label_user_type">Are you a</string>
    <string name="creator">Creator</string>
    <string name="viewer">Viewer</string>
    <string name="label_new_movies">New Movies</string>
    <string name="label_slide_movies">Slide Movies</string>
    <string name="btn_accept">Accept</string>
    <string name="btn_reject">Reject</string>
    <string name="pending">Pending</string>


</resources>