<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.userCredential.UserSubscriptionPlanFragment">

    <data>
        <import type="android.view.View"/>

        <variable
            name="viewModel"
            type="com.nkr.mashproadmin.ui.userCredential.UserSubscriptionPlanViewModel" />
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/label_choose_plan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/label_subscription_plan"
            android:textStyle="bold"
            android:textColor="@color/white_100"
            android:textSize="@dimen/xmmLargeTextSize"
            android:layout_marginEnd="@dimen/spaceXXLarge"
            android:layout_marginStart="@dimen/spaceXXLarge"
            app:layout_constraintBottom_toTopOf="@+id/btn_free_plan"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            android:layout_marginBottom="@dimen/spaceXXLarge"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_free_plan"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_black"
            android:text="@string/free"
            android:textSize="@dimen/xLargeTextSize"
            app:layout_constraintBottom_toTopOf="@+id/btn_monthly_plan"
            app:layout_constraintTop_toBottomOf="@+id/label_choose_plan"
            android:layout_marginTop="@dimen/spaceNormal"
            android:layout_marginEnd="@dimen/spaceXXLarge"
            android:layout_marginStart="@dimen/spaceXXLarge"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_monthly_plan"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_black"
            android:text="@string/monthly"
            android:textSize="@dimen/xLargeTextSize"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_free_plan"
            android:layout_marginTop="@dimen/spaceNormal"
            android:layout_marginEnd="@dimen/spaceXXLarge"
            android:layout_marginStart="@dimen/spaceXXLarge"
            />


        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="@{viewModel.showLoading.booleanValue()? View.VISIBLE:View.GONE}"
            android:layout_gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>